# 11320ISS507300_Assistant

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-tests.txt  requirements.txt  streamlit_app.py  system_prompt.txt
.devcontainer/: devcontainer.json
.github/workflows/: pre-commit.yaml  smokeshow.yml  tests.yml
_locales/en/: messages.json
_locales/zh-CN/: messages.json
_locales/zh-TW/: messages.json
src/: streamlit_app.py
src/pages/: gemini_with_image_analysis  home.py  main_page.py  pets_autogen.py  pets_gemini.py  word2vec-2d.py  word2vec-3d.py  word2vec-cbow.py  word2vec-skip-gram.py
src/schemas/: pets.py
src/static/: BudgetAdvisor_Agent_Prompt.txt  Care Guide Agent Prompt  Matchmaker_Agent_Prompt.txt  article_contents.csv  system_prompt.txt
src/utils/: ctx_mgr.py  helpers.py
src/utils/bots/: __init__.py  agent.py  ctx_mgr.py  helpers.py
src/utils/function_call/: __init__.py  pets.py  wordcloud.py
src/utils/i18n/: __init__.py  internationalization.py  main.py
src/utils/week10/: __init__.py  helpers.py
tests/: test_chat.py  test_langs.py
tests/utils/: i18n.py
