[project]
name = "11320iss507300-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.5.3",
    "autogen-ext[openai]>=0.5.3",
    "bidict>=0.23.1",
    "black>=25.1.0",
    "google-genai>=1.11.0",
    "openai>=1.75.0",
    "pre-commit>=4.2.0",
    "streamlit>=1.44.1",
]
