[project]
name = "11320iss507300-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "black>=25.1.0",
    "gensim>=4.3.3",
    "google-genai>=1.11.0",
    "nltk>=3.9.1",
    "numpy==1.26.4",
    "openai>=1.75.0",
    "plotly>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
markers = [
    "early",
    "performance",
    "query_param",
]
